add speaker_count dataset

--- a/Data/data-ingestion-scraping.ipynb
+++ b/Data/data-ingestion-scraping.ipynb
@@ -32,11 +32,13 @@
     "  - Areas and countries where spoken (categorical)\n",
     "  - Level of endangerment (categorical)\n",
     "\n",
-    "2. **Wikipedia list of official languages by country and territory** $^*$\n",
+    "2. **Wikipedia list of official languages by country and territory and List of Languages by Speaker Count** $^*$\n",
     "\n",
-    "  - *URL:* https://en.wikipedia.org/wiki/List_of_official_languages_by_country_and_territory?utm_source=chatgpt.com \n",
+    "  - *URL:* https://en.wikipedia.org/wiki/List_of_official_languages_by_country_and_territory\n",
+    "  - *URL*: https://en.wikipedia.org/wiki/List_of_languages_by_total_number_of_speakers \n",
     "  - Recognized as a country's official language by a governement body (binary)\n",
     "  - Widely spoken, regional, minority or national language (categorical)\n",
+    "  - Number of speakers of non-endangered languages (discrete)\n",
     "\n",
     "3. **World Bank Indicators**\n",
     "  - *URL:* https://data.worldbank.org/indicator?tab=all\n",
@@ -53,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 1,
    "id": "00bac252",
    "metadata": {},
    "outputs": [],
@@ -486,12 +488,12 @@
    "id": "54f782d1",
    "metadata": {},
    "source": [
-    "### Wikipedia Dataset"
+    "### Wikipedia Datasets"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "id": "2e35f046",
    "metadata": {},
    "outputs": [
@@ -529,7 +531,7 @@
     }
    ],
    "source": [
-    "## Scrape from Wikipedia page\n",
+    "## Official language: Scrape from Wikipedia page\n",
     "\n",
     "!pip install lxml\n",
     "\n",
@@ -689,6 +691,205 @@
     "\n",
     "df2 = pd.read_csv('Project/datasci207-final-project/Data/official_languages.csv')\n",
     "df2.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "088a9661",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: lxml in /usr/local/lib/python3.12/site-packages (5.4.0)\n",
+      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager, possibly rendering your system unusable. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv. Use the --root-user-action option if you know what you are doing and want to suppress this warning.\u001b[0m\u001b[33m\n",
+      "\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m25.0.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.1.1\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
+      "Number of tables found: 7\n",
+      "                                            Language         Family  \\\n",
+      "                                            Language         Family   \n",
+      "0                   English (excl. creole languages)  Indo-European   \n",
+      "1  Mandarin Chinese (incl. Standard Chinese, but ...   Sino-Tibetan   \n",
+      "2                                 Hindi (excl. Urdu)  Indo-European   \n",
+      "3                   Spanish (excl. creole languages)  Indo-European   \n",
+      "4            Modern Standard Arabic (excl. dialects)   Afro-Asiatic   \n",
+      "\n",
+      "       Branch Numbers of speakers (millions)                        \\\n",
+      "       Branch           First- language (L1) Second- language (L2)   \n",
+      "0    Germanic                            390                  1138   \n",
+      "1     Sinitic                            990                   194   \n",
+      "2  Indo-Aryan                            345                   264   \n",
+      "3     Romance                            484                    74   \n",
+      "4     Semitic                           0[a]                   335   \n",
+      "\n",
+      "                 \n",
+      "  Total (L1+L2)  \n",
+      "0          1528  \n",
+      "1          1184  \n",
+      "2           609  \n",
+      "3           558  \n",
+      "4           335  \n"
+     ]
+    }
+   ],
+   "source": [
+    "## Number of Speakers: Scrape from Wikipedia page\n",
+    "\n",
+    "!pip install lxml\n",
+    "\n",
+    "## URL of the Wikipedia page\n",
+    "url = \"https://en.wikipedia.org/wiki/List_of_languages_by_total_number_of_speakers\"\n",
+    "\n",
+    "## Read all tables from the page\n",
+    "tables_2 = pd.read_html(url)\n",
+    "\n",
+    "## Inspect how many tables were found\n",
+    "print(f\"Number of tables found: {len(tables_2)}\")\n",
+    "\n",
+    "## Example: View the first one (this is usually the main table)\n",
+    "df5 = tables_2[0]\n",
+    "print(df5.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "d2f29d06",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Save table to csv in repo folder \n",
+    "\n",
+    "df5.to_csv('Project/datasci207-final-project/Data/speaker_count.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "f85fff32",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>Language</th>\n",
+       "      <th>Family</th>\n",
+       "      <th>Branch</th>\n",
+       "      <th>Numbers of speakers (millions)</th>\n",
+       "      <th>Numbers of speakers (millions).1</th>\n",
+       "      <th>Numbers of speakers (millions).2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Language</td>\n",
+       "      <td>Family</td>\n",
+       "      <td>Branch</td>\n",
+       "      <td>First- language (L1)</td>\n",
+       "      <td>Second- language (L2)</td>\n",
+       "      <td>Total (L1+L2)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>English (excl. creole languages)</td>\n",
+       "      <td>Indo-European</td>\n",
+       "      <td>Germanic</td>\n",
+       "      <td>390</td>\n",
+       "      <td>1138</td>\n",
+       "      <td>1528</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Mandarin Chinese (incl. Standard Chinese, but ...</td>\n",
+       "      <td>Sino-Tibetan</td>\n",
+       "      <td>Sinitic</td>\n",
+       "      <td>990</td>\n",
+       "      <td>194</td>\n",
+       "      <td>1184</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>Hindi (excl. Urdu)</td>\n",
+       "      <td>Indo-European</td>\n",
+       "      <td>Indo-Aryan</td>\n",
+       "      <td>345</td>\n",
+       "      <td>264</td>\n",
+       "      <td>609</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>Spanish (excl. creole languages)</td>\n",
+       "      <td>Indo-European</td>\n",
+       "      <td>Romance</td>\n",
+       "      <td>484</td>\n",
+       "      <td>74</td>\n",
+       "      <td>558</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0                                           Language  \\\n",
+       "0         NaN                                           Language   \n",
+       "1         0.0                   English (excl. creole languages)   \n",
+       "2         1.0  Mandarin Chinese (incl. Standard Chinese, but ...   \n",
+       "3         2.0                                 Hindi (excl. Urdu)   \n",
+       "4         3.0                   Spanish (excl. creole languages)   \n",
+       "\n",
+       "          Family      Branch Numbers of speakers (millions)  \\\n",
+       "0         Family      Branch           First- language (L1)   \n",
+       "1  Indo-European    Germanic                            390   \n",
+       "2   Sino-Tibetan     Sinitic                            990   \n",
+       "3  Indo-European  Indo-Aryan                            345   \n",
+       "4  Indo-European     Romance                            484   \n",
+       "\n",
+       "  Numbers of speakers (millions).1 Numbers of speakers (millions).2  \n",
+       "0            Second- language (L2)                    Total (L1+L2)  \n",
+       "1                             1138                             1528  \n",
+       "2                              194                             1184  \n",
+       "3                              264                              609  \n",
+       "4                               74                              558  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Read new csv\n",
+    "\n",
+    "df5 = pd.read_csv('Project/datasci207-final-project/Data/speaker_count.csv')\n",
+    "df5.head()"
    ]
   },
   {
