--- a/Data Cleaning/data-cleaning.ipynb
+++ b/Data Cleaning/data-cleaning.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "dca162eb",
    "metadata": {},
    "outputs": [],
@@ -28,12 +28,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "0d70857f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df1 = pd.read_csv('Data/endangered_languages.csv')\n"
+    "df1 = pd.read_csv('../Data/endangered_languages.csv')"
    ]
   },
   {
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "fe5a0c22",
    "metadata": {},
    "outputs": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "f4afa80a",
    "metadata": {},
    "outputs": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "c72fc16e",
    "metadata": {},
    "outputs": [],
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "edb60667",
    "metadata": {},
    "outputs": [
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "a8578d44",
    "metadata": {},
    "outputs": [
@@ -422,13 +422,13 @@
        "4   Spanish French Portuguese                  NaN           NaN  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df2 = pd.read_csv(\"Data/official_languages.csv\")\n",
+    "df2 = pd.read_csv(\"../Data/official_languages.csv\")\n",
     "df2_cleaned = df2.copy()\n",
     "for col in df2.columns:\n",
     "    if not pd.api.types.is_numeric_dtype(df2[col]):\n",
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "2c328b34",
    "metadata": {},
    "outputs": [
@@ -554,13 +554,13 @@
        "5                      0.0                     335.0            335  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df3 = pd.read_csv(\"Data/speaker_count.csv\")\n",
+    "df3 = pd.read_csv(\"../Data/speaker_count.csv\")\n",
     "\n",
     "# clean df3\n",
     "df3.replace('—', pd.NA, inplace=True)\n",
@@ -589,13 +589,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "f40a35e0",
    "metadata": {},
    "outputs": [],
    "source": [
     "# load and filter df4\n",
-    "df4 = pd.read_csv('Data/wb_urban.csv')\n",
+    "df4 = pd.read_csv(\"../Data/wb_urban.csv\")\n",
     "df4_cleaned = df4[['Country Name', '2023']]\n",
     "del(df4)\n",
     "df4_cleaned = df4_cleaned[~df4_cleaned.isna().any(axis=1)].reset_index()"
@@ -613,13 +613,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "677bbc3c",
    "metadata": {},
    "outputs": [],
    "source": [
     "# load and filter df4\n",
-    "df5 = pd.read_csv('Data/wb_internet.csv')\n",
+    "df5 = pd.read_csv(\"../Data/wb_internet.csv\")\n",
     "year_cols = [col for col in df5.columns if str(col).isdigit()]\n",
     "year_cols = sorted(year_cols, key=int)\n",
     "\n",
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "8830838c",
    "metadata": {},
    "outputs": [],
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "id": "9a28af97",
    "metadata": {},
    "outputs": [],
@@ -720,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "id": "2ba43080",
    "metadata": {},
    "outputs": [],
@@ -772,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "id": "1124b945",
    "metadata": {},
    "outputs": [],
@@ -806,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "id": "23fbf84c",
    "metadata": {},
    "outputs": [],
@@ -900,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "id": "183a0c3e",
    "metadata": {},
    "outputs": [
@@ -1190,7 +1190,7 @@
        "[3184 rows x 14 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
