--- a/Data/data-ingestion-scraping.ipynb
+++ b/Data/data-ingestion-scraping.ipynb
@@ -55,10 +55,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "00bac252",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '/workspace'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 6\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mplt\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mos\u001b[39;00m\n\u001b[0;32m----> 6\u001b[0m \u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mchdir\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m/workspace\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/workspace'"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -493,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "2e35f046",
    "metadata": {},
    "outputs": [
@@ -501,25 +513,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: lxml in /usr/local/lib/python3.12/site-packages (5.4.0)\n",
-      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager, possibly rendering your system unusable. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv. Use the --root-user-action option if you know what you are doing and want to suppress this warning.\u001b[0m\u001b[33m\n",
-      "\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m25.0.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.1.1\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
+      "Requirement already satisfied: lxml in /Users/courtneychen/miniforge3/envs/tf/lib/python3.10/site-packages (5.4.0)\n",
       "Number of tables found: 9\n",
-      "   Country/Region  Number of official (including de facto)  \\\n",
-      "0     Abkhazia[a]                                        2   \n",
-      "1  Afghanistan[1]                                        2   \n",
-      "2      Albania[2]                                        1   \n",
-      "3      Algeria[3]                                        2   \n",
-      "4         Andorra                                        1   \n",
+      "         Country/Region  Number of official (including de facto)  \\\n",
+      "0           Abkhazia[a]                                        2   \n",
+      "1  Afghanistan[1][2][3]                                        2   \n",
+      "2            Albania[4]                                        1   \n",
+      "3            Algeria[5]                                        2   \n",
+      "4               Andorra                                        1   \n",
       "\n",
       "    Official language(s)                               Regional language(s)  \\\n",
       "0         Abkhaz Russian                                                NaN   \n",
       "1  Persian (Dari) Pashto  Uzbek[b] Turkmen[b] Pashayi[b] Nuristani[b] Ba...   \n",
       "2               Albanian                                                NaN   \n",
       "3          Arabic Berber                                                NaN   \n",
-      "4             Catalan[4]                                                NaN   \n",
+      "4             Catalan[6]                                                NaN   \n",
       "\n",
       "         Minority language(s)   National language(s)   Widely spoken  \n",
       "0                    Georgian                 Abkhaz             NaN  \n",
@@ -1378,11 +1386,55 @@
     "\n",
     "df4.to_csv('Project/datasci207-final-project/Data/wb_internet.csv')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3da5cdbc",
+   "metadata": {},
+   "source": [
+    "### "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "66e6a352",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
+    "\n",
+    "# Example: you load your html page (use actual URL or file path)\n",
+    "# html = requests.get('URL').text\n",
+    "with open('your_file.html') as f:\n",
+    "    html = f.read()\n",
+    "\n",
+    "soup = BeautifulSoup(html, 'html.parser')\n",
+    "\n",
+    "# Extract all headers (country names likely are <h3>, <h2>, etc. depending on site)\n",
+    "headers = soup.find_all(['h1', 'h2', 'h3', 'strong', 'b'])\n",
+    "\n",
+    "# Loop through each country header and its following sibling text\n",
+    "for header in headers:\n",
+    "    country = header.get_text().strip()\n",
+    "\n",
+    "    # Look for next sibling text\n",
+    "    sibling = header.find_next_sibling()\n",
+    "    while sibling and (sibling.name is None or 'major-language' in sibling.get_text().lower()):\n",
+    "        sibling = sibling.find_next_sibling()\n",
+    "\n",
+    "    if sibling:\n",
+    "        lang_text = sibling.get_text().strip()\n",
+    "        print(f\"Country: {country}\")\n",
+    "        print(f\"Languages: {lang_text}\")\n",
+    "        print()\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "tf",
    "language": "python",
    "name": "python3"
   },
@@ -1396,7 +1448,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
