Adding explanation of features

--- a/Data Cleaning/data-cleaning.ipynb
+++ b/Data Cleaning/data-cleaning.ipynb
@@ -10,6 +10,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "63e8a76f",
+   "metadata": {},
+   "source": [
+    "Features\n",
+    "- Language name\n",
+    "- Endangerment Level\n",
+    "- Number of speakers\n",
+    "- Countries in which the language is spoken - to be excluded from final model due to lack of distinct categories\n",
+    "- Counts of countries in which a language is recognized as an official, national, regional, minority, and widely spoken language (5 separate columns)\n",
+    "- Maximum urbanization rate across associated countries (max was chosen to compare peak urbanization, which reflects the strongest potential impact on language endangerment)\n",
+    "- Most recent internet use across associated countries - We take the most recent value for this feature to minimize missing values\n",
+    "- Years since last internet use observation - included so the model can learn from the missingness in the internet use feature and account for differences in years\n",
+    "\n",
+    "It contains the language name, endangerment level, number of speakers, countries in which its spoken (probably best to exclude from the model since there are so many different combinations), count of countries "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "dca162eb",
