--- a/Helin-EDA.ipynb
+++ b/Helin-EDA.ipynb
@@ -478,7 +478,7 @@
    "id": "1a71c254-2683-4679-b130-32536c621ab4",
    "metadata": {},
    "source": [
-    "The violin plots illustrate how urbanization and internet access vary across different language endangerment levels. Interestingly, the \"Awakening\" and \"Dormant\" categories tend to have both higher medians and broader distributions for max_urbanization and max_internet_use. This suggests that these languages are often found in more urbanized, digitally connected countries—possibly reflecting active revitalization efforts, archival access, or recent shifts in classification.\n",
+    "The violin plots illustrate how urbanization and internet access vary across different language endangerment levels. Interestingly, the \"Awakening\" and \"Dormant\" categories tend to have both higher medians and broader distributions for max_urbanization and max_internet_use. This suggests that these languages are often found in more urbanized, digitally connected countries, possibly reflecting active revitalization efforts, archival access, or recent shifts in classification.\n",
     "\n",
     "In contrast, languages labeled as \"Vulnerable,\" \"Endangered,\" or \"At risk\" typically cluster around lower medians for both indicators. Their narrower distributions imply that these languages are more concentrated in less connected and more rural regions, reinforcing the idea that lower infrastructure access may limit language preservation."
    ]
