Multiplying Non Endangered speaker counts by 1M and adding updated dataset

--- a/Data Cleaning/data-cleaning.ipynb
+++ b/Data Cleaning/data-cleaning.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 10,
    "id": "dca162eb",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 11,
    "id": "0d70857f",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 12,
    "id": "fe5a0c22",
    "metadata": {},
    "outputs": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 13,
    "id": "f4afa80a",
    "metadata": {},
    "outputs": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 14,
    "id": "c72fc16e",
    "metadata": {},
    "outputs": [],
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 15,
    "id": "edb60667",
    "metadata": {},
    "outputs": [
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 16,
    "id": "a8578d44",
    "metadata": {},
    "outputs": [
@@ -436,7 +436,7 @@
        "4   Spanish French Portuguese                  NaN           NaN  "
       ]
      },
-     "execution_count": 123,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 17,
    "id": "2c328b34",
    "metadata": {},
    "outputs": [
@@ -504,9 +504,9 @@
        "      <td>English</td>\n",
        "      <td>Indo-European</td>\n",
        "      <td>Germanic</td>\n",
-       "      <td>390.0</td>\n",
-       "      <td>1138.0</td>\n",
-       "      <td>1528</td>\n",
+       "      <td>390000000.0</td>\n",
+       "      <td>1.138000e+09</td>\n",
+       "      <td>1.528000e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -514,9 +514,9 @@
        "      <td>Mandarin Chinese</td>\n",
        "      <td>Sino-Tibetan</td>\n",
        "      <td>Sinitic</td>\n",
-       "      <td>990.0</td>\n",
-       "      <td>194.0</td>\n",
-       "      <td>1184</td>\n",
+       "      <td>990000000.0</td>\n",
+       "      <td>1.940000e+08</td>\n",
+       "      <td>1.184000e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -524,9 +524,9 @@
        "      <td>Hindi</td>\n",
        "      <td>Indo-European</td>\n",
        "      <td>Indo-Aryan</td>\n",
-       "      <td>345.0</td>\n",
-       "      <td>264.0</td>\n",
-       "      <td>609</td>\n",
+       "      <td>345000000.0</td>\n",
+       "      <td>2.640000e+08</td>\n",
+       "      <td>6.090000e+08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -534,9 +534,9 @@
        "      <td>Spanish</td>\n",
        "      <td>Indo-European</td>\n",
        "      <td>Romance</td>\n",
-       "      <td>484.0</td>\n",
-       "      <td>74.0</td>\n",
-       "      <td>558</td>\n",
+       "      <td>484000000.0</td>\n",
+       "      <td>7.400000e+07</td>\n",
+       "      <td>5.580000e+08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -545,8 +545,8 @@
        "      <td>Afro-Asiatic</td>\n",
        "      <td>Semitic</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>335.0</td>\n",
-       "      <td>335</td>\n",
+       "      <td>3.350000e+08</td>\n",
+       "      <td>3.350000e+08</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -560,15 +560,15 @@
        "4         3.0                 Spanish  Indo-European     Romance   \n",
        "5         4.0  Modern Standard Arabic   Afro-Asiatic     Semitic   \n",
        "\n",
-       "   First Language Speakers  Second Language Speakers Total Speakers  \n",
-       "1                    390.0                    1138.0           1528  \n",
-       "2                    990.0                     194.0           1184  \n",
-       "3                    345.0                     264.0            609  \n",
-       "4                    484.0                      74.0            558  \n",
-       "5                      0.0                     335.0            335  "
+       "   First Language Speakers  Second Language Speakers  Total Speakers  \n",
+       "1              390000000.0              1.138000e+09    1.528000e+09  \n",
+       "2              990000000.0              1.940000e+08    1.184000e+09  \n",
+       "3              345000000.0              2.640000e+08    6.090000e+08  \n",
+       "4              484000000.0              7.400000e+07    5.580000e+08  \n",
+       "5                      0.0              3.350000e+08    3.350000e+08  "
       ]
      },
-     "execution_count": 124,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -582,8 +582,13 @@
     "for col in df3.columns:\n",
     "    if col == 'Language':\n",
     "        df3_cleaned[col] = df3[col].apply(clean_language_text)\n",
-    "    if col in ['Numbers of speakers (millions)', 'Numbers of speakers (millions).1', 'Total Speakers']:\n",
+    "    if col in ['Numbers of speakers (millions)', 'Numbers of speakers (millions).1', 'Numbers of speakers (millions).2']:\n",
     "        df3_cleaned[col] = df3[col].apply(clean_number_text)\n",
+    "\n",
+    "# multiply speaker counts by 1,000,000\n",
+    "cols_to_multiply = ['Numbers of speakers (millions)', 'Numbers of speakers (millions).1', 'Numbers of speakers (millions).2']\n",
+    "for col in cols_to_multiply:\n",
+    "    df3_cleaned[col] = pd.to_numeric(df3_cleaned[col], errors='coerce') * 1_000_000\n",
     "\n",
     "# remove header row\n",
     "df3_cleaned = df3_cleaned[1:]\n",
@@ -603,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 18,
    "id": "f40a35e0",
    "metadata": {},
    "outputs": [],
@@ -627,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 19,
    "id": "677bbc3c",
    "metadata": {},
    "outputs": [],
@@ -655,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 20,
    "id": "8830838c",
    "metadata": {},
    "outputs": [],
@@ -692,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 21,
    "id": "9a28af97",
    "metadata": {},
    "outputs": [],
@@ -717,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 22,
    "id": "2ba43080",
    "metadata": {},
    "outputs": [],
@@ -769,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 23,
    "id": "1124b945",
    "metadata": {},
    "outputs": [],
@@ -799,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 24,
    "id": "23fbf84c",
    "metadata": {},
    "outputs": [],
@@ -891,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 30,
    "id": "183a0c3e",
    "metadata": {},
    "outputs": [
@@ -1025,7 +1030,7 @@
        "      <th>3136</th>\n",
        "      <td>Thai</td>\n",
        "      <td>Not Endangered</td>\n",
-       "      <td>71</td>\n",
+       "      <td>71000000000000</td>\n",
        "      <td>Thailand;Viet Nam</td>\n",
        "      <td>1</td>\n",
        "      <td>3</td>\n",
@@ -1040,7 +1045,7 @@
        "      <th>3137</th>\n",
        "      <td>Javanese</td>\n",
        "      <td>Not Endangered</td>\n",
-       "      <td>69</td>\n",
+       "      <td>69000000000000</td>\n",
        "      <td>Indonesia</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
@@ -1055,7 +1060,7 @@
        "      <th>3138</th>\n",
        "      <td>Italian</td>\n",
        "      <td>Not Endangered</td>\n",
-       "      <td>66</td>\n",
+       "      <td>66000000000000</td>\n",
        "      <td>Albania;Argentina;Croatia;Eritrea;Italy;Sovere...</td>\n",
        "      <td>5</td>\n",
        "      <td>0</td>\n",
@@ -1070,7 +1075,7 @@
        "      <th>3140</th>\n",
        "      <td>Levantine Arabic</td>\n",
        "      <td>Not Endangered</td>\n",
-       "      <td>60</td>\n",
+       "      <td>60000000000000</td>\n",
        "      <td>Algeria;Bahrain;Chad;Comoros;Cyprus;Djibouti;E...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1085,7 +1090,7 @@
        "      <th>3143</th>\n",
        "      <td>Sudanese Arabic</td>\n",
        "      <td>Not Endangered</td>\n",
-       "      <td>52</td>\n",
+       "      <td>52000000000000</td>\n",
        "      <td>Algeria;Bahrain;Chad;Comoros;Cyprus;Djibouti;E...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1102,18 +1107,18 @@
        "</div>"
       ],
       "text/plain": [
-       "         official_name                  level  speakers  \\\n",
-       "0                 !Xun             Vulnerable     18000   \n",
-       "2       (Lower) Tanana  Critically Endangered        25   \n",
-       "3              A'ingae             Vulnerable      1500   \n",
-       "4                Aasáx                Extinct         0   \n",
-       "5                Abaga  Critically Endangered         5   \n",
-       "...                ...                    ...       ...   \n",
-       "3136              Thai         Not Endangered        71   \n",
-       "3137          Javanese         Not Endangered        69   \n",
-       "3138           Italian         Not Endangered        66   \n",
-       "3140  Levantine Arabic         Not Endangered        60   \n",
-       "3143   Sudanese Arabic         Not Endangered        52   \n",
+       "         official_name                  level        speakers  \\\n",
+       "0                 !Xun             Vulnerable           18000   \n",
+       "2       (Lower) Tanana  Critically Endangered              25   \n",
+       "3              A'ingae             Vulnerable            1500   \n",
+       "4                Aasáx                Extinct               0   \n",
+       "5                Abaga  Critically Endangered               5   \n",
+       "...                ...                    ...             ...   \n",
+       "3136              Thai         Not Endangered  71000000000000   \n",
+       "3137          Javanese         Not Endangered  69000000000000   \n",
+       "3138           Italian         Not Endangered  66000000000000   \n",
+       "3140  Levantine Arabic         Not Endangered  60000000000000   \n",
+       "3143   Sudanese Arabic         Not Endangered  52000000000000   \n",
        "\n",
        "                                                country  official  regional  \\\n",
        "0                           South Africa;Namibia;Angola         0         0   \n",
@@ -1157,13 +1162,13 @@
        "[2808 rows x 12 columns]"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# stacked_df.to_csv('final_dataset.csv')\n",
+    "stacked_df.to_parquet(\"final_dataset.parquet\", index=False)\n",
     "stacked_df"
    ]
   }
