--- a/Data Cleaning/data-cleaning.ipynb
+++ b/Data Cleaning/data-cleaning.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 37,
    "id": "dca162eb",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 38,
    "id": "0d70857f",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 39,
    "id": "fe5a0c22",
    "metadata": {},
    "outputs": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 40,
    "id": "f4afa80a",
    "metadata": {},
    "outputs": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 41,
    "id": "c72fc16e",
    "metadata": {},
    "outputs": [],
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 42,
    "id": "edb60667",
    "metadata": {},
    "outputs": [
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 43,
    "id": "a8578d44",
    "metadata": {},
    "outputs": [
@@ -436,7 +436,7 @@
        "4   Spanish French Portuguese                  NaN           NaN  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 44,
    "id": "2c328b34",
    "metadata": {},
    "outputs": [
@@ -568,7 +568,7 @@
        "5                      0.0              3.350000e+08    3.350000e+08  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 45,
    "id": "f40a35e0",
    "metadata": {},
    "outputs": [],
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 46,
    "id": "677bbc3c",
    "metadata": {},
    "outputs": [],
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 47,
    "id": "8830838c",
    "metadata": {},
    "outputs": [],
@@ -679,7 +679,7 @@
     "stacked_df['level'] = stacked_df['level'].fillna('Not Endangered')\n",
     "\n",
     "# create speaker map using cleaned language names\n",
-    "speaker_map = df3_cleaned.set_index('Language')['Total Speakers'] * 1_000_000\n",
+    "speaker_map = df3_cleaned.set_index('Language')['Total Speakers']\n",
     "\n",
     "# don't cast speakers column yet - leave as float while assigning\n",
     "stacked_df['speakers'] = pd.to_numeric(stacked_df['speakers'], errors='coerce')\n",
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 48,
    "id": "9a28af97",
    "metadata": {},
    "outputs": [],
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 49,
    "id": "2ba43080",
    "metadata": {},
    "outputs": [],
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 50,
    "id": "1124b945",
    "metadata": {},
    "outputs": [],
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 51,
    "id": "23fbf84c",
    "metadata": {},
    "outputs": [],
@@ -896,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 52,
    "id": "183a0c3e",
    "metadata": {},
    "outputs": [
@@ -1030,7 +1030,7 @@
        "      <th>3136</th>\n",
        "      <td>Thai</td>\n",
        "      <td>Not Endangered</td>\n",
-       "      <td>71000000000000</td>\n",
+       "      <td>71000000</td>\n",
        "      <td>Thailand;Viet Nam</td>\n",
        "      <td>1</td>\n",
        "      <td>3</td>\n",
@@ -1045,7 +1045,7 @@
        "      <th>3137</th>\n",
        "      <td>Javanese</td>\n",
        "      <td>Not Endangered</td>\n",
-       "      <td>69000000000000</td>\n",
+       "      <td>69000000</td>\n",
        "      <td>Indonesia</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
@@ -1060,7 +1060,7 @@
        "      <th>3138</th>\n",
        "      <td>Italian</td>\n",
        "      <td>Not Endangered</td>\n",
-       "      <td>66000000000000</td>\n",
+       "      <td>66000000</td>\n",
        "      <td>Albania;Argentina;Croatia;Eritrea;Italy;Sovere...</td>\n",
        "      <td>5</td>\n",
        "      <td>0</td>\n",
@@ -1075,7 +1075,7 @@
        "      <th>3140</th>\n",
        "      <td>Levantine Arabic</td>\n",
        "      <td>Not Endangered</td>\n",
-       "      <td>60000000000000</td>\n",
+       "      <td>60000000</td>\n",
        "      <td>Algeria;Bahrain;Chad;Comoros;Cyprus;Djibouti;E...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1090,7 +1090,7 @@
        "      <th>3143</th>\n",
        "      <td>Sudanese Arabic</td>\n",
        "      <td>Not Endangered</td>\n",
-       "      <td>52000000000000</td>\n",
+       "      <td>52000000</td>\n",
        "      <td>Algeria;Bahrain;Chad;Comoros;Cyprus;Djibouti;E...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1107,18 +1107,18 @@
        "</div>"
       ],
       "text/plain": [
-       "         official_name                  level        speakers  \\\n",
-       "0                 !Xun             Vulnerable           18000   \n",
-       "2       (Lower) Tanana  Critically Endangered              25   \n",
-       "3              A'ingae             Vulnerable            1500   \n",
-       "4                Aasáx                Extinct               0   \n",
-       "5                Abaga  Critically Endangered               5   \n",
-       "...                ...                    ...             ...   \n",
-       "3136              Thai         Not Endangered  71000000000000   \n",
-       "3137          Javanese         Not Endangered  69000000000000   \n",
-       "3138           Italian         Not Endangered  66000000000000   \n",
-       "3140  Levantine Arabic         Not Endangered  60000000000000   \n",
-       "3143   Sudanese Arabic         Not Endangered  52000000000000   \n",
+       "         official_name                  level  speakers  \\\n",
+       "0                 !Xun             Vulnerable     18000   \n",
+       "2       (Lower) Tanana  Critically Endangered        25   \n",
+       "3              A'ingae             Vulnerable      1500   \n",
+       "4                Aasáx                Extinct         0   \n",
+       "5                Abaga  Critically Endangered         5   \n",
+       "...                ...                    ...       ...   \n",
+       "3136              Thai         Not Endangered  71000000   \n",
+       "3137          Javanese         Not Endangered  69000000   \n",
+       "3138           Italian         Not Endangered  66000000   \n",
+       "3140  Levantine Arabic         Not Endangered  60000000   \n",
+       "3143   Sudanese Arabic         Not Endangered  52000000   \n",
        "\n",
        "                                                country  official  regional  \\\n",
        "0                           South Africa;Namibia;Angola         0         0   \n",
@@ -1162,7 +1162,7 @@
        "[2808 rows x 12 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
