--- a/extra_trees.ipynb
+++ b/extra_trees.ipynb
@@ -362,14 +362,14 @@
     "The tuned version involves optimizing four hyperparameters-n_estimators, max_depth, learning_rate, and subsample-to see which combinations most improve model performance.\n",
     "\n",
     "Granular levels:\n",
-    "- Train accuracy: 0.7956\n",
-    "- Validation accuracy: 0.7596\n",
-    "- Log loss: 0.7841\n",
+    " - Train accuracy: 0.8066\n",
+    " - Validation accuracy: 0.7561\n",
+    " - Log loss: 0.8066\n",
     "\n",
     "Grouped levels:\n",
-    "- Train accuracy: 0.8751\n",
-    "- Validation accuracy: 0.8972\n",
-    "- Log loss: 0.3630"
+    " - Train accuracy: 0.9123\n",
+    " - Validation accuracy: 0.8937\n",
+    " - Log loss: 0.9123\n"
    ]
   },
   {
