finalizes extra trees

--- a/extra_trees.ipynb
+++ b/extra_trees.ipynb
@@ -364,25 +364,30 @@
     "Granular levels:\n",
     " - Train accuracy: 0.8066\n",
     " - Validation accuracy: 0.7561\n",
-    " - Log loss: 0.8066\n",
+    " - Log loss: 1.0561\n",
     "\n",
     "Grouped levels:\n",
     " - Train accuracy: 0.9123\n",
     " - Validation accuracy: 0.8937\n",
-    " - Log loss: 0.9123\n"
+    " - Log loss: 0.4729\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 39,
    "id": "01adef89",
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.metrics import log_loss\n",
+    "\n",
+    "from sklearn.metrics import log_loss\n",
+    "\n",
     "def et_tuner(param_dict, X_train, y_train, X_val, y_val):\n",
     "    best_model = None\n",
     "    best_score = 0\n",
     "    best_train = 0\n",
+    "    best_log_loss = float('inf')  # Initialize best log loss\n",
     "    best_params = {}\n",
     "    \n",
     "    # Common parameters to tune for Extra Trees:\n",
@@ -408,11 +413,16 @@
     "        train_acc = model.score(X_train, y_train)\n",
     "        val_acc = model.score(X_val, y_val)\n",
     "        \n",
+    "        # Compute log loss using predict_proba\n",
+    "        val_proba = model.predict_proba(X_val)\n",
+    "        val_log_loss = log_loss(y_val, val_proba)\n",
+    "        \n",
     "        # Update best model if validation score improves\n",
     "        if val_acc > best_score:\n",
     "            best_model = model\n",
     "            best_score = val_acc\n",
     "            best_train = train_acc\n",
+    "            best_log_loss = val_log_loss  # Store the best log loss\n",
     "            best_params = {\n",
     "                'n_estimators': est,\n",
     "                'max_depth': depth,\n",
@@ -422,9 +432,9 @@
     "    \n",
     "    print(f\"Train accuracy: {best_train:.4f}\")\n",
     "    print(f\"Validation accuracy: {best_score:.4f}\")\n",
-    "    print(f\"Log loss: {best_train:.4f}\")\n",
+    "    print(f\"Log loss: {best_log_loss:.4f}\")  # Use the stored log loss\n",
     "    print(f\"Best hyperparameters: {best_params}\")\n",
-    "    return best_model, best_score, best_train, best_params"
+    "    return best_model, best_score, best_log_loss, best_params  # Return log loss instead of train accuracy\n"
    ]
   },
   {
@@ -499,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 40,
    "id": "acd5c2ff",
    "metadata": {},
    "outputs": [
@@ -509,7 +519,7 @@
      "text": [
       "Train accuracy: 0.8066\n",
       "Validation accuracy: 0.7561\n",
-      "Log loss: 0.8066\n",
+      "Log loss: 1.0561\n",
       "Best hyperparameters: {'n_estimators': 100, 'max_depth': 15, 'min_samples_split': 2, 'min_samples_leaf': 2}\n"
      ]
     }
@@ -536,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 41,
    "id": "49c5f59c",
    "metadata": {},
    "outputs": [
@@ -546,7 +556,7 @@
      "text": [
       "Train accuracy: 0.9123\n",
       "Validation accuracy: 0.8937\n",
-      "Log loss: 0.9123\n",
+      "Log loss: 0.4729\n",
       "Best hyperparameters: {'n_estimators': 100, 'max_depth': 15, 'min_samples_split': 5, 'min_samples_leaf': 1}\n"
      ]
     }
